--- a/package.json
+++ b/package.json
@@ -1,25 +1,14 @@
 {
-  "name": "mod11",
+  "name": "note-taker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/laurenivey11/mod-11.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/laurenivey11/mod-11/issues"
-  },
-  "homepage": "https://github.com/laurenivey11/mod-11#readme",
   "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {}
+    "express": "^4.16.4"
+  }
 }
