--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +20,6 @@
     "url": "https://github.com/laurenivey11/mod-11/issues"
   },
   "homepage": "https://github.com/laurenivey11/mod-11#readme",
+  "devDependencies": {},
   "description": ""
 }
